tests/e2e/semantics/output_assignment_existing_var3.error
Error: syntax error in story at line 3, column 29

3|        foreach [1, 2, 3] as i, x
                                  ^

E0138: Output must be unique. Can not use existing `x`.
