tests/e2e/semantics/output_assignment_existing_var3.story
x = 1
while true
    foreach [1, 2, 3] as i, x
        a = 1
